test/should-fail/变量数组-5.j
function test takes nothing returns nothing
    local code array cs
endfunction